# weatherapi

./: .env.example  .pre-commit-config.yaml  Dockerfile  Readme.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml
deploy/: deploy.sh  deployment.yaml  service.yaml
weatherapi/: app.py  backend.py  config.py  token.py  views.py
