[tool.poetry]
name = "weatherapi"
version = "0.1.0"
description = ""
authors = ["Denis Lesnov"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = {extras = ["speedups"], version = "^3.7.4"}
furl = "^2.1.3"
gunicorn = "^20.1.0"
aiohttp-jwt = "^0.6.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
